Updates
-Update file encryption & decryption
-Update validation
-Re-name class to AESFileEncDec
-Add some styles